--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,9 @@ platform = espressif8266
 board = nodemcuv2
 framework = arduino
 monitor_speed = 115200
+
+[env:d1_mini]
+platform = espressif8266
+board = d1_mini
+framework = arduino
+monitor_speed = 115200
