--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,13 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+; add a file to the project called uploadPassword.ini
+; make it's contents
+; [password]
+; upload_password = password
+
+; where password is plain text version of MD5 set in void setupOtaUpdates()
+
 [env:nodemcuv2]
 platform = espressif8266
 board = nodemcuv2
@@ -15,7 +22,11 @@ framework = arduino
 monitor_speed = 115200
 
 [env:d1_mini]
+extra_scripts=uploadPassword.py
 platform = espressif8266
 board = d1_mini
 framework = arduino
 monitor_speed = 115200
+upload_port = 192.168.1.45
+upload_flags =
+    --auth=password
