Tidy platformio.ini

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,18 +8,20 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[env:nodemcuv2]
+platform = espressif8266
+board = nodemcuv2
+framework = arduino
+monitor_speed = 115200
+
+; to enable OTA
 ; add a file to the project called uploadPassword.ini
 ; make it's contents
 ; [password]
 ; upload_password = password
 
 ; where password is plain text version of MD5 set in void setupOtaUpdates()
-
-[env:nodemcuv2]
-platform = espressif8266
-board = nodemcuv2
-framework = arduino
-monitor_speed = 115200
+; set upload_port to IP of your weather server
 
 [env:d1_mini]
 extra_scripts=uploadPassword.py
