--- a/platformio.ini
+++ b/platformio.ini
@@ -20,7 +20,7 @@ monitor_speed = 115200
 ; [password]
 ; upload_password = password
 
-; where password is plain text version of MD5 set in void setupOtaUpdates()
+; where password is plain text version of MD5 set in Settings.h
 ; set upload_port to IP of your weather server
 
 [env:d1_mini]
@@ -29,6 +29,7 @@ platform = espressif8266
 board = d1_mini
 framework = arduino
 monitor_speed = 115200
+upload_protocol = espota
 upload_port = 192.168.1.45
 upload_flags =
     --auth=password
