--- a/platformio.ini
+++ b/platformio.ini
@@ -29,7 +29,7 @@ platform = espressif8266
 board = d1_mini
 framework = arduino
 monitor_speed = 115200
-upload_protocol = espota
-upload_port = 192.168.1.45
-upload_flags =
-    --auth=password
+;upload_protocol = espota
+;upload_port = 192.168.1.45
+;upload_flags =
+;    --auth=password
