--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,12 @@ board = nodemcuv2
 framework = arduino
 monitor_speed = 115200
 
+[env:d1_mini]
+platform = espressif8266
+board = d1_mini
+framework = arduino
+monitor_speed = 115200
+
 ; to enable OTA
 ; add a file to the project called uploadPassword.ini
 ; make it's contents
@@ -23,13 +29,13 @@ monitor_speed = 115200
 ; where password is plain text version of MD5 set in Settings.h
 ; set upload_port to IP of your weather server
 
-[env:d1_mini]
+[env:d1_mini_ota]
 extra_scripts=uploadPassword.py
 platform = espressif8266
 board = d1_mini
 framework = arduino
 monitor_speed = 115200
-;upload_protocol = espota
-;upload_port = 192.168.1.45
-;upload_flags =
-;    --auth=password
+upload_protocol = espota
+upload_port = 192.168.1.45
+upload_flags =
+    --auth=password
